@@ -1,4 +1,8 @@
-2007-07-05  Sven Schober <sschober@suse.de>
+2007-07-05  Thorsten Kukuk  <kukuk@suse.de>
+
+	* src/pam-config.8.xml: Remove obsoete xauth entry.
+
+2007-07-05  Sven Schober  <sschober@suse.de>
 	* src/mod_pam_unix.c: Changed option "big_crypt" to
 	"bigcrypt".
 	* src/mod_pam_mount.c: New.
@@ -11,7 +15,8 @@
 	* src/supported-modules.h: Added pam_mount.so to
 	common_module_list, auth and session list. 
 	* src/Makefile.am: Added mod_pam_mount.c. 
-2007-07-04  Sven Schober <sschober@suse.de>
+
+2007-07-04  Sven Schober  <sschober@suse.de>
 
 	* src/mod_pam_unix.c: New. 
 	* src/sanity_checks.c: Added check for pam_unix/2-conflict
